[gd_scene load_steps=15 format=3 uid="uid://b7mhdrj3b6loq"]

[ext_resource type="Script" uid="uid://5uqub2a6701b" path="res://game/doors/door.gd" id="1_vx1od"]
[ext_resource type="Material" uid="uid://dojhoc6ljpt1a" path="res://game/materials/walls_gray.tres" id="1_xelsh"]
[ext_resource type="Texture2D" uid="uid://sfjjweantpja" path="res://images/level/doors.png" id="3_ymlcn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cs8ri"]
size = Vector2(9, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7b5a"]
size = Vector2(48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nqrw"]
atlas = ExtResource("3_ymlcn")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lhfw"]
atlas = ExtResource("3_ymlcn")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qci2x"]
atlas = ExtResource("3_ymlcn")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vug2"]
atlas = ExtResource("3_ymlcn")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymlcn"]
atlas = ExtResource("3_ymlcn")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8rhb"]
atlas = ExtResource("3_ymlcn")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb6pu"]
atlas = ExtResource("3_ymlcn")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j83fq"]
atlas = ExtResource("3_ymlcn")
region = Rect2(64, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8rhb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nqrw")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lhfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qci2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vug2")
}],
"loop": false,
"name": &"closing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymlcn")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8rhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb6pu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j83fq")
}],
"loop": false,
"name": &"opening",
"speed": 10.0
}]

[node name="Door" type="Node2D"]
script = ExtResource("1_vx1od")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-8.5, 0)

[node name="StaticBodyCollision" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_cs8ri")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-8.5, 0)
collision_layer = 0
collision_mask = 136

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_u7b5a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("1_xelsh")
sprite_frames = SubResource("SpriteFrames_r8rhb")
animation = &"closed"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
